# Mozaik

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
.github/workflows/: release.yml
resources/: mozaik.desktop  resources.qrc  style.qss
src/: main.cpp
src/backend/: hypr_client.cpp  hypr_client.h
src/ui/: mainwindow.cpp  mainwindow.h
